[package]
name = "Signal-Streamer-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.2"
simper-filter = "0.1.1"
tokio = { version = "1.47.1", features = ["full"] }
eframe = "0.33.3"

[[bin]]
name = "receive-demo"
path = "src/receive-demo.rs"

